--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,14 @@
+body{
+    background-color: rgb(179, 212, 252);
+}
 .encabezado{
-    font-size: 25px;
+    font-size: 20px;
     margin-left: 750px;
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.e1{
-    background-color: rgb(179, 212, 252);
-    margin-top: 0px;
-    padding-top: 0px;
+.titulo{
+    font-size: 35px;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-left: 240px;
 }
