--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ body{
     font-size: 20px;
     margin-left: 750px;
     font-family: Arial, Helvetica, sans-serif;
+    color: navy;
 }
 
 .titulo{
@@ -24,4 +25,5 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     margin-top: 250px;
+    color: navy;
 }
