--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -84,12 +84,8 @@ body {
 
 .grafico_gen {
     background-color: #c2c2c2;
-    margin: auto;
-    width: 50%;
-    height: 300px;
     border: 2px solid black;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin: 50px 200px;
     visibility: hidden;
 }
 
